tests/mm0_mmu/fail/bad-sort3214.mm0
-- bad modifier order
provable strict pure free sort s3214;